tests/ui/nebula_derive_rls_public_with_operation.stderr
error: Nebula `rls(public)` cannot include operations, columns, authorization, resource, or custom predicates
 --> tests/ui/nebula_derive_rls_public_with_operation.rs:4:8
  |
4 | struct Task {
  |        ^^^^
